// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hr render 1`] = `
<DocumentFragment>
  <hr
    class="hr"
  />
</DocumentFragment>
`;

exports[`Hr styles 1`] = `
<DocumentFragment>
  <hr
    class="hr"
    style="margin-top: 3rem; margin-bottom: 3rem;"
  />
</DocumentFragment>
`;
